# bmstu-modeling-6th-sem

./: README.md
lab_01/: Cargo.toml
lab_01/src/: constants.rs  lib.rs  main.rs
lab_01/src/euler/: mod.rs
lab_01/src/picard/: mod.rs
