[package]
name = "lab_01"
version = "0.1.0"
edition = "2021"
authors = [ "Simeon Romanov <archeosAnacritis@gmail.com>" ]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dev-dependencies]
# criterion = "0.3"
# [[bench]]
# name = "bench"
# harness = false

[dependencies]
prettytable-rs = "^0.10"
